createBoard + flipCard ok

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEMORY GAME #PPI</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
 </head>
 <body>
     <section class="containerP">
         <h1>MEMORY GAME</h1>
-        <div id="gameBoard">
-
-        </div>
+        <div id="gameBoard"></div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
